deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pikatwo-fe-svc
  labels:
    app: pikatwo-fe
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pikatwo-fe
